# teste-pip-install

./: pyproject.toml
teste_pip_install/: main.py
